--- a/pages/rds/residuos/alexyeiyei.html
+++ b/pages/rds/residuos/alexyeiyei.html
@@ -25,8 +25,10 @@
                 <a href="https://www.instagram.com/acidostatemados/">Alexyeiyei/acidostatemados </a>   
             </div>
         </article>
-        <footer>           
-                <a class="regresar" href="javascript:history.back()">&larr;</a>
+        <footer class="ftr">  
+                <div class="ftr__back">
+                    <a class="ftr__flecha" href="javascript:history.back()">&larr;</a>
+                </div>               
         </footer>
 
     </body>
