--- a/pages/rds/residuos/francisco.html
+++ b/pages/rds/residuos/francisco.html
@@ -11,7 +11,7 @@
 
     <body>
         <div id="RDimg">
-            <img src="imgs/rds-webp80/francisco_Captura-de-Pantalla-2020-10-26-a-la(s)-10.28.06.webp">
+            <img src="../../../media/imgs/rds/imgs/rds-webp80/francisco_Captura-de-Pantalla-2020-10-26-a-la(s)-10.28.06.webp">
         </div>        
         <article id="RDtxt">
             <h1>Un abrazo carnal estoy en chinga</h1>                  
