--- a/pages/rds/residuos/la_ruta_principal.html
+++ b/pages/rds/residuos/la_ruta_principal.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div id="RDimg">
-            <img src="imgs/rds-webp80/la_ruta_principal.webp">
+            <img src="../../../media/imgs/rds/imgs/rds-webp80/la_ruta_principal.webp">
         </div>
         <article id="RDtxt">
             <h1>La ruta principal</h1>
