--- a/pages/rds/residuos/lectura_de_tarot.html
+++ b/pages/rds/residuos/lectura_de_tarot.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div id="RDimg">
-            <img src="imgs/rds-webp80/lectura_de_tarot.webp" style="height: 100vh; object-fit: cover;">
+            <img src="../../../media/imgs/rds/imgs/rds-webp80/lectura_de_tarot.webp" style="height: 100vh; object-fit: cover;">
         </div>
         
         <article id="RDtxt">
