--- a/pages/rds/residuos/maria.html
+++ b/pages/rds/residuos/maria.html
@@ -11,7 +11,7 @@
 
     <body>
         <div id="RDimg">
-            <img src="imgs/rds-webp80/maria.webp">
+            <img src="../../../media/imgs/rds/imgs/rds-webp80/maria.webp">
         </div>
         
         <article id="RDtxt">
