--- a/pages/rds/residuos/una_oraciometica.html
+++ b/pages/rds/residuos/una_oraciometica.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div id="RDimg">
-            <img src="imgs/rds-webp80/una_oraciómetica.webp">
+            <img src="../../../media/imgs/rds/imgs/rds-webp80/una_oraciómetica.webp">
         </div>      
         <article id="RDtxt">
             <h1>Una oraciomética (sólo 500 pesos!)</h1>                 
