--- a/pages/rds/residuos/xvi_la_torre.html
+++ b/pages/rds/residuos/xvi_la_torre.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div id="RDimg">
-            <img src="imgs/rds-webp80/XVI_LA_TORRE.webp">
+            <img src="../../../media/imgs/rds/imgs/rds-webp80/XVI_LA_TORRE.webp">
         </div>       
         <article id="RDtxt">
             <h1>XVI LA TORRE</h1>               
@@ -33,7 +33,7 @@
                 <b>Figura Koan:</b> Las palabras dichas no estuvieron ni están.
             </p>
             <div id="RDimgXtra">
-                <img src="imgs/rds-webp80/xvi_la_torre_extra.webp">
+                <img src="../../../media/imgs/rds/imgs/rds-webp80/xvi_la_torre_extra.webp">
             </div>
             <p id="pieDfoto">
                 <i>"Melancolía I", Alberto Durero, 1514 <br> (cortesía del autor)</i>
