--- a/pages/rds/residuos/alexyeiyei.html
+++ b/pages/rds/residuos/alexyeiyei.html
@@ -11,7 +11,7 @@
 
     <body>
         <div id="RDimg">
-            <img src="imgs/rds-webp80/Alexyeiyei.webp">
+            <img src="../../../media/imgs/rds/imgs/rds-webp80/Alexyeiyei.webp">
         </div>        
         <article id="RDtxt">
             <h1>Literalmente mi ex novia y yo :(</h1>                  
