--- a/pages/rds/residuos/lorraine.html
+++ b/pages/rds/residuos/lorraine.html
@@ -11,7 +11,7 @@
 
     <body>
         <div id="RDimg">
-            <img src="imgs/rds-webp80/jaime.webp">
+            <img src="../../../media/imgs/rds/imgs/rds-webp80/jaime.webp">
         </div>
         <article id="RDtxt">
             <h1>Lorraine</h1>                 
