--- a/pages/rds/residuos/powderfingers.html
+++ b/pages/rds/residuos/powderfingers.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div id="RDimg">
-            <img src="imgs/rds-webp80/powderfingers.webp">
+            <img src="../../../media/imgs/rds/imgs/rds-webp80/powderfingers.webp">
         </div>       
         <article id="RDtxt">
             <h1>Powderfingers</h1>          
