--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul class="main-menu__list">
             <li><a href="pages/proyectos.html">proyectos</a></li>            
             <li><a href="blog.html">blog</a></li>           
-            <li><a href="videos.html">videos</a></li>            
+            <li><a href="pages/videos.html">videos</a></li>            
             <li><a href="correo-ilustrado.html">acerca de</a></li>
             <li><a href="tianguis.html">anúnciate</a></li>
             <li><a href="colabora.html">colabora</a></li>
