--- a/pages/videos.html
+++ b/pages/videos.html
@@ -5,9 +5,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Proyectos</title>    
+        <title>Videos</title>    
     </head>
-
 <body>
     <header>
         <h1 class="site-name">
@@ -17,16 +16,10 @@
 
     <nav role="navigation" class="main-menu">
         <ul class="main-menu__list">
-            <li><a href="rds/rds.html">residuos digitales</a></li>
-            <!-- <li><a href="jacares/jacares.html" class="main-menu__list_blk">jacares</a></li>             -->
+            <li><a href="videos/pbdlp.html">primera bienal de la pipa</a></li>
+            <li><a href="sbdlp.html">segunda bienal de la pipa</a></li>             
         </ul>
     </nav>
-
-    <footer class="ftr">  
-        <div class="ftr ftr__back">
-            <a class="ftr ftr__flecha" href="javascript:history.back()">&larr;</a>                      
-        </div>         
-    </footer>
     
 </body>
 </html>
