agregué entrada de blog ficunam

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <nav role="navigation" class="main-menu">
         <ul class="main-menu__list">
             <li><a href="pages/proyectos.html">proyectos</a></li>            
-            <li><a href="blog.html">blog</a></li>           
+            <li><a href="pages/blog.html">blog</a></li>           
             <li><a href="pages/videos.html">videos</a></li>            
-            <li><a href="correo-ilustrado.html">acerca de</a></li>
+            <!-- <li><a href="correo-ilustrado.html">acerca de</a></li>
             <li><a href="tianguis.html">anúnciate</a></li>
-            <li><a href="colabora.html">colabora</a></li>
+            <li><a href="colabora.html">colabora</a></li> -->
         </ul>
     </nav>
 
