--- a/pages/blog.html
+++ b/pages/blog.html
@@ -16,10 +16,15 @@
 
     <nav role="navigation" class="main-menu">
         <ul class="main-menu__list">
-            <li><a href="videos/pbdlp.html">primera bienal de la pipa</a></li>
-            <li><a href="videos/sbdlp.html">segunda bienal de la pipa</a></li>             
+            <li><a href="blog/ficunam11.html"> FICUNAM 2021: <br> 100% GRATI$ no fake</a></li>             
         </ul>
     </nav>
+
+    <footer class="ftr">  
+        <div class="ftr ftr__back">
+            <a class="ftr ftr__flecha" href="javascript:history.back()">&larr;</a>                      
+        </div>         
+    </footer>
     
-</body>
+</body> 
 </html>
