cambie los futers de rds

--- a/pages/rds/residuos/alexyeiyei.html
+++ b/pages/rds/residuos/alexyeiyei.html
@@ -25,11 +25,10 @@
                 <a href="https://www.instagram.com/acidostatemados/">Alexyeiyei/acidostatemados </a>   
             </div>
         </article>
-        <footer class="ftr">  
-                <div class="ftr__back">
-                    <a class="ftr__flecha" href="javascript:history.back()">&larr;</a>
-                </div>               
+        <footer class="ft-rds">           
+            <a href="javascript:history.back()">&larr;</a>
         </footer>
+
 
     </body>
 </html>
