--- a/pages/rds/residuos/francisco.html
+++ b/pages/rds/residuos/francisco.html
@@ -23,8 +23,8 @@
                 <a href="https://www.facebook.com/francisco.r.5">Soreiv LS </a>   
             </div>
         </article>
-        <footer>           
-                <a href="javascript:history.back()">&larr;</a>
+        <footer class="ft-rds">           
+            <a href="javascript:history.back()">&larr;</a>
         </footer>
 
     </body>
