--- a/pages/rds/residuos/la_ruta_principal.html
+++ b/pages/rds/residuos/la_ruta_principal.html
@@ -31,8 +31,8 @@
                 <a>Santiago Rivero</a>   
             </div>
         </article>
-        <footer>           
-                <a href="javascript:history.back()">&larr;</a>
+        <footer class="ft-rds">           
+            <a href="javascript:history.back()">&larr;</a>
         </footer>
 
     </body>
