--- a/pages/rds/residuos/lorraine.html
+++ b/pages/rds/residuos/lorraine.html
@@ -22,8 +22,8 @@
                 <a>Jaime Huerta</a>   
             </div>
         </article>
-        <footer>           
-                <a href="javascript:history.back()">&larr;</a>
+        <footer class="ft-rds">           
+            <a href="javascript:history.back()">&larr;</a>
         </footer>
 
     </body>
