--- a/pages/rds/residuos/maria.html
+++ b/pages/rds/residuos/maria.html
@@ -25,13 +25,12 @@
                 <a>María L.</a>   
             </div>
 
-
         </article>
         
         
 
-        <footer>           
-                <a href="javascript:history.back()">&larr;</a>
+        <footer class="ft-rds">           
+            <a href="javascript:history.back()">&larr;</a>
         </footer>
 
     </body>
