--- a/pages/rds/residuos/xvi_la_torre.html
+++ b/pages/rds/residuos/xvi_la_torre.html
@@ -42,8 +42,8 @@
                 <a href="https://twitter.com/julian_herbert?s=20">Julián Herbert</a>   
             </div>
         </article>       
-        <footer>           
-                <a href="javascript:history.back()">&larr;</a>
+        <footer class="ft-rds">           
+            <a href="javascript:history.back()">&larr;</a>
         </footer>
 
     </body>
