--- a/pages/blog.html
+++ b/pages/blog.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1 class="site-name">
-            <a href="/" rel="home">efectotv</a> 
+            <a href="/" rel="home">blog</a> 
         </h1>
     </header>
 
