--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1 class="site-name">
-            <a href="/" rel="home">efectotv</a> 
+            <a href="/" rel="home">proyectos</a> 
         </h1>
     </header>
 
