--- a/pages/rds/residuos/david.html
+++ b/pages/rds/residuos/david.html
@@ -50,8 +50,8 @@
         
         
 
-        <footer>           
-                <a href="javascript:history.back()">&larr;</a>
+        <footer class="ft-rds">           
+            <a href="javascript:history.back()">&larr;</a>
         </footer>
 
     </body>
