--- a/pages/rds/residuos/lectura_de_tarot.html
+++ b/pages/rds/residuos/lectura_de_tarot.html
@@ -22,8 +22,8 @@
                 <a>Pedro Pablo Marín</a>   
             </div> 
         </article>       
-        <footer>           
-                <a href="javascript:history.back()">&larr;</a>
+        <footer class="ft-rds">           
+            <a href="javascript:history.back()">&larr;</a>
         </footer>
 
     </body>
