--- a/pages/rds/residuos/powderfingers.html
+++ b/pages/rds/residuos/powderfingers.html
@@ -23,9 +23,10 @@
             <div id="autor">            
                 <a href="https://www.instagram.com/iansebelius/">Ian Sebelius</a>   
             </div>           
-        </article>       
-        <footer>           
-                <a href="javascript:history.back()">&larr;</a>
+        </article>   
+            
+        <footer class="ft-rds">           
+            <a href="javascript:history.back()">&larr;</a>
         </footer>
 
     </body>
