--- a/pages/rds/residuos/una_oraciometica.html
+++ b/pages/rds/residuos/una_oraciometica.html
@@ -23,9 +23,10 @@
             <div id="autor">            
                 <a>Jesse Rothbard </a>   
             </div>            
-        </article>       
-        <footer style="margin-top:6em">           
-                <a href="javascript:history.back()">&larr;</a>
+        </article> 
+        
+        <footer class="ft-rds">           
+            <a href="javascript:history.back()">&larr;</a>
         </footer>
 
     </body>
