--- a/pages/videos.html
+++ b/pages/videos.html
@@ -10,16 +10,24 @@
 <body>
     <header>
         <h1 class="site-name">
-            <a href="/" rel="home">efectotv</a> 
+            <a href="/" rel="home">videos</a> 
         </h1>
     </header>
 
     <nav role="navigation" class="main-menu">
         <ul class="main-menu__list">
             <li><a href="videos/pbdlp.html">primera bienal de la pipa</a></li>
-            <li><a href="videos/sbdlp.html">segunda bienal de la pipa</a></li>             
+            <li><a href="videos/sbdlp.html">segunda bienal de la pipa</a></li>
+            <li><a href="videos/reyes.html">los reyes del after en do mayor</a></li>   
+            <li><a href="videos/remiks2018.html">remiks/comp 2018</a></li>                         
         </ul>
     </nav>
     
+    <footer class="ftr">  
+        <div class="ftr ftr__back">
+            <a class="ftr ftr__flecha" href="javascript:history.back()">&larr;</a>                      
+        </div>         
+    </footer>
+
 </body>
 </html>
