ultimos reoques para sacar la primera versión más o menos decente

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -18,7 +18,13 @@
         <ul class="main-menu__list">
             <li><a href="blog/ficunam11.html"> FICUNAM 2021: <br> 100% GRATI$ no fake</a></li>             
         </ul>
+        
+        <div class="mmBG_blog">
+            <img src="https://miro.medium.com/max/1600/1*cf_XS-kS1QflMsAMh56mcQ.jpeg" alt="árboles">
+        </div>
     </nav>
+
+   
 
     <footer class="ftr">  
         <div class="ftr ftr__back">
