--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -20,6 +20,11 @@
             <li><a href="rds/rds.html">residuos digitales</a></li>
             <!-- <li><a href="jacares/jacares.html" class="main-menu__list_blk">jacares</a></li>             -->
         </ul>
+
+        <div class="mainMenu-BG">
+            <img src="https://cdn.pixabay.com/photo/2015/03/26/09/47/sky-690293__340.jpg" alt="nubes">
+        </div>
+
     </nav>
 
     <footer class="ftr">  
