cancelado marcos aviña

--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>        
+    <head> 
+         <!-- Google Analytics -->
+        <script>
+        window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+        ga('create', 'UA-XXXXX-Y', 'auto');
+        ga('send', 'pageview');
+        </script>
+        <script async src='https://www.google-analytics.com/analytics.js'></script>
+        <!-- End Google Analytics -->       
+
+
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <meta charset="utf-8">
         <meta name="descripcion" content="en esta página encontrarás los proyecto adicionales de @efectotv_">
         <title>efectotv_</title>
         <link rel="icon" type="image/png" href="pirate-flag.png">		
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+                
     </head>
 
 <body>
