--- a/pages/videos.html
+++ b/pages/videos.html
@@ -16,8 +16,8 @@
 
     <nav role="navigation" class="main-menu">
         <ul class="main-menu__list">
-            <li><a href="videos/pbdlp.html">primera bienal de la pipa</a></li>
-            <li><a href="videos/sbdlp.html">segunda bienal de la pipa</a></li>
+            <!-- <li><a href="videos/pbdlp.html">primera bienal de la pipa</a></li>
+            <li><a href="videos/sbdlp.html">segunda bienal de la pipa</a></li> -->
             <li><a href="videos/reyes.html">los reyes del after en do mayor</a></li>   
             <li><a href="videos/remiks2018.html">remiks/comp 2018</a></li>                         
         </ul>
