--- a/pages/blog.html
+++ b/pages/blog.html
@@ -17,6 +17,7 @@
     <nav role="navigation" class="main-menu">
         <ul class="main-menu__list">
             <li><a href="blog/ficunam11.html"> FICUNAM 2021: <br> 100% GRATI$ no fake</a></li>             
+            <li><a href="blog/ciudad.html"> "Ciudad"(2020) de México, <br>ciudad compleja</a></li>             
         </ul>
         
         <div class="mmBG_blog">
