agregué tags de google analytics

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -30,7 +30,7 @@
             <li><a href="blog/ciudad.html"> "Ciudad"(2020) de México, <br>ciudad compleja</a></li>             
         </ul>
         
-        <div class="mmBG_blog">
+        <div class="mmBG">
             <img src="https://miro.medium.com/max/1600/1*cf_XS-kS1QflMsAMh56mcQ.jpeg" alt="árboles">
         </div>
     </nav>
