--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+
+                <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-XE4CBFW5JH"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-XE4CBFW5JH');
+        </script>
+
         <link rel="stylesheet" href="../styles/main.css">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,7 +32,7 @@
             <!-- <li><a href="jacares/jacares.html" class="main-menu__list_blk">jacares</a></li>             -->
         </ul>
 
-        <div class="mainMenu-BG">
+        <div class="mmBG">
             <img src="https://cdn.pixabay.com/photo/2015/03/26/09/47/sky-690293__340.jpg" alt="nubes">
         </div>
 
