--- a/pages/rds/participa.html
+++ b/pages/rds/participa.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>        
+            <head>  
+                <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-XE4CBFW5JH"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-XE4CBFW5JH');
+        </script>      
         <link rel="stylesheet" type="text/css" href="../main.css">
         <meta charset="utf-8">
         <meta name="descripcion" content="en esta página encontrarás los proyecto adicionales de @efectotv_">
