agregué optimización de títulos y descripciones

--- a/pages/videos.html
+++ b/pages/videos.html
@@ -15,7 +15,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Videos</title>    
+        <title>efectoVids</title> 
+        <meta name="descripcion" content="reelaboración de la realidad, conspiración de la mirada">   
     </head>
 <body>
     <header>
