--- a/pages/videos/remiks2018.html
+++ b/pages/videos/remiks2018.html
@@ -18,6 +18,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>remiks 2018</title>    
+    <meta name="descripcion" content="compilación de videos de facebook remixeados en el 2017">
 </head>
 
 <body>
