--- a/pages/videos/reyes.html
+++ b/pages/videos/reyes.html
@@ -17,7 +17,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primera Bienal de la Pipa</title>    
+    <title>Los reyes del after en Do mayor</title>    
+    <meta name="descripcion" content="Famoso video de cuando Luisito empezaba sus pininos con audio y video retrabajados">
 </head>
 
 <body>
