--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         </script>    
         
         <link rel="stylesheet" type="text/css" href="styles/main.css">
-        <meta charset="utf-8">
-        <meta name="descripcion" content="en esta página encontrarás los proyecto adicionales de @efectotv_">
-        <title>efectotv_</title>
+        <meta charset="utf-8">        
+        <title>efectotv __ digreciones digitales</title>
+        <meta name="descripcion" content="extensión de la cuenta de instagram @efectotv_">
         <link rel="icon" type="image/png" href="pirate-flag.png">		
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
