--- a/pages/blog.html
+++ b/pages/blog.html
@@ -15,12 +15,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Videos</title>    
+        <title>efectoBlog apuntes culturales</title>    
+        <meta name="descripcion" content="periodismo cultural libre y gratuito">
     </head>
 <body>
     <header>
         <h1 class="site-name">
-            <a href="/" rel="home">blog</a> 
+            <a href="/" rel="home">efectoBlog</a> 
         </h1>
     </header>
 
