--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -16,13 +16,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Proyectos</title>    
+        <title>efectoProyektz</title>    
+        <meta name="descripcion" content="proyectos colaborativos de exploración digital">
     </head>
 
 <body>
     <header>
         <h1 class="site-name">
-            <a href="/" rel="home">proyectos</a> 
+            <a href="/" rel="home">efectoProyektz</a> 
         </h1>
     </header>
 
