--- a/pages/rds/rds.html
+++ b/pages/rds/rds.html
@@ -11,10 +11,9 @@
         gtag('config', 'G-XE4CBFW5JH');
         </script>  
         <link rel="stylesheet" type="text/css" href="../../styles/main.css">
-        <meta charset="utf-8">
-        <meta name="descripcion" content="en esta página encontrarás los proyecto adicionales de @efectotv_">
-        <title>efectotv_</title>
-        
+        <meta charset="utf-8">        
+        <title>Residuos digitales</title>
+        <meta name="descripcion" content="proyecto colaborativo de escritura y reinterpretación de las imágenes digitales. Participa!">
         <link rel="icon" type="image/png" href="../pirate-flag.png">		
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
