--- a/pages/rds/participa-form.html
+++ b/pages/rds/participa-form.html
@@ -10,7 +10,7 @@
 
         gtag('config', 'G-XE4CBFW5JH');
         </script>      
-        <link rel="stylesheet" type="text/css" href="../main.css">
+        <link rel="stylesheet" type="text/css" href="../../styles/main.css">
         <meta charset="utf-8">
         <meta name="descripcion" content="en esta página encontrarás los proyecto adicionales de @efectotv_">
         <title>efectotv_</title>
@@ -19,11 +19,25 @@
     </head>
 
     <body>
-        <header>
-            <h1>¡PARTICIPA!</h1>           
+        <header >
+            <h1 class="site-name">
+                <a href="rds.html">residuos digitales</a></h1>           
         </header>
         
-        <form action="">
+        <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScuaZ6MsXEjsDf-BIxCvg79lLi62H7Cv2mMmy6QfFQQUwE-BA/formResponse?embedded=true" class="formRDS">
+            <label for="liga">Copia y pega la liga a la imagen que elegiste</label><br>
+            <input type="text" id="liga" name="entry.795767304" value="">
+
+            <label for="texto">Escribe un texto</label><br>
+            <input type="text" id="texto" name="entry.1873948268" value="">
+
+            <label for="titulo">Dale un título</label><br>
+            <input type="text" id="titulo" name="entry.697563945" value="">
+
+            <label for="firma">Fírmala! (escribe tu nombre o seudónimo)</label><br>
+            <input type="text" id="firma" name="entry.738240505" value="">
+
+            <input type="submit" value="enviar" />
             
         </form>
 
