--- a/pages/rds/rds.html
+++ b/pages/rds/rds.html
@@ -42,7 +42,7 @@
         
 
             <nav class="rds-nav">
-                <a href="participa.html">¡participa!</a>
+                <a href="participa-form.html">¡participa!</a>
                 <br>
                 <a href="residuos/f-e-e-d.html">solo txt</a>
             </nav>
