--- a/pages/rds/participa.html
+++ b/pages/rds/participa.html
@@ -23,7 +23,7 @@
             <h1>¡PARTICIPA!</h1>           
         </header>
         
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScuaZ6MsXEjsDf-BIxCvg79lLi62H7Cv2mMmy6QfFQQUwE-BA/viewform?embedded=true" width="100%" height="1020" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScuaZ6MsXEjsDf-BIxCvg79lLi62H7Cv2mMmy6QfFQQUwE-BA/viewform?embedded=true" width="640" height="820" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 
         
