--- a/pages/rds/rds.html
+++ b/pages/rds/rds.html
@@ -14,7 +14,7 @@
         <meta charset="utf-8">        
         <title>Residuos digitales</title>
         <meta name="descripcion" content="proyecto colaborativo de escritura y reinterpretación de las imágenes digitales. Participa!">
-        <link rel="icon" type="image/png" href="../pirate-flag.png">		
+        <!-- <link rel="icon" type="image/png" href="../pirate-flag.png">		 -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
