cambié tag html a "es"

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>    
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-XE4CBFW5JH"></script>
@@ -7,7 +7,6 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-
         gtag('config', 'G-XE4CBFW5JH');
         </script>    
         
@@ -16,7 +15,7 @@
         <title>efectotv __ digreciones digitales</title>
         <meta name="descripcion" content="extensión de la cuenta de instagram @efectotv_">
         <link rel="icon" type="image/png" href="pirate-flag.png">		
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">   
     </head>
 
 <body>
