agregué la entrada del mira la cama

--- a/pages/rds/rds.html
+++ b/pages/rds/rds.html
@@ -49,6 +49,7 @@
             
             
             <div class="galeria">
+                <a href="residuos/emmanuel.html"><img src="../../media/imgs/rds/thmbs/emmanuel.webp" alt="tortuga"></a>
                 <a href="residuos/maria.html"><img src="../../media/imgs/rds/thmbs/maria.webp" alt="salón de clases con girasol en la pared"></a>
                 <a href="residuos/david.html"><img src="../../media/imgs/rds/thmbs/david.webp" alt="vista al campo a través de un mosquitero"></a>
                 <a href="residuos/alexyeiyei.html"><img src="../../media/imgs/rds/thmbs/Alexyeiyei.webp" alt="joven pareja besándose frente a un espejo, el chico usa una playera de fut con el logo de Movistar"></a>
